--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
   "author": "kanchan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "c": "^1.1.1",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "validator": "^13.12.0"
   }
 }
